Changes in 0.70.4:
  o Client Changes
    * The trove that satisfies a dependency that is broken by erase is
      now displayed in the "Troves being removed create unresolved
      dependencies" message.
  o Build Changes (cvc)
    * CompilePython has been fixed to accept macros in its arguments.
      This bug cropped up in 0.70.3
  o Repository Changes
    * Repository now serves up OpenPGP Keys it has stored, in the same
      manner as "Limited Keyservers". Limited meaning users can only
      retrieve keys. No search or browse capability is implied. The page
      is available under /getOpenPGPKey?search=KEY_ID. This page is not
      really intended for end user browsing so much as evenutally imbuing
      conary with the ability to automatically retrieve OpenPGP Keys used
      to make package signatures.

Changes in 0.70.3:
  o Client Changes (conary)
    * Conary now works harder to avoid having separate erase/installs,
      instead preferring to link those up into one update when possible.
    * Conary configuration now supports contexts.  Contexts are defined in 
      sections starting with a [<name>] line, and provide contextual 
      configurations for certain variables, defined in the man page.  All 
      configuration options after the [<name>] will be associated with that 
      context, and will override the default configuration when that context 
      is active.  The current context can be selected by using the --context 
      parameter, or by setting the CONARY_CONTEXT environment variable. 
    * 'conary config --show-contexts' will display the available contexts
  o Build Changes (cvc)
    * A local cook of a trove foo will ensure that the changeset created is 
      installable on your local system, by making sure the version number 
      created is unique.
    * The builddir is no longer allowed to appear in ELF RPATHs.
    * The build documentation strings have been significantly updated